boreal/tests/assets/invalid_files/parsing/string_modifier_duplicated.yar
rule a {
    strings:
        $a = "a" private wide private
}
